--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@android:color/white"> <!-- Cor de fundo opcional -->
+    android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/splash_image"
