reset password xml screen

--- a/app/src/main/res/layout/activity_reset_screen.xml
+++ b/app/src/main/res/layout/activity_reset_screen.xml
@@ -1,10 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResetScreen">
+    tools:context=".ResetScreen"
+    android:background="@color/white"
+    android:focusableInTouchMode="true"
+    android:gravity="center">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="20dp"
+            android:gravity="center_horizontal">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/easyfilterlogo"
+                android:layout_gravity="center_horizontal"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reset Your Password"
+                android:textSize="18sp"
+                android:textColor="@color/primaryColor"
+                android:layout_marginTop="20dp"
+                android:textAlignment="center" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:boxStrokeColor="@color/primaryLightColor"
+                app:hintTextColor="@color/primaryLightColor"
+                android:hint="Email">
+
+                <EditText
+                    android:id="@+id/editTextEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/cirResetButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reset Password"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center_horizontal"
+                app:spinning_bar_width="4dp"
+                app:spinning_bar_color="@color/white"
+                app:initialCornerAngle="27dp"
+                android:backgroundTint="@color/primaryColor" />
+
+          
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Back to Login"
+                android:textColor="@color/primaryColor"
+                android:textAlignment="center"
+                android:layout_marginTop="20dp"
+                android:onClick="onBackToLoginClick" />
+
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
