--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,8 +32,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Welcome to Easy Filter"
-                android:textSize="18sp"
+                android:text="Sign in"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 android:textColor="@color/primaryColor"
                 android:layout_marginTop="20dp"
                 android:textAlignment="center" />
@@ -78,7 +79,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Forgot Password?"
+                android:text="Forgot Password? Click here"
                 android:textColor="@color/primaryColor"
                 android:layout_gravity="end"
                 android:layout_marginTop="10dp" />
