update screen firebase

--- a/app/src/main/res/layout/activity_reset_screen.xml
+++ b/app/src/main/res/layout/activity_reset_screen.xml
@@ -64,10 +64,8 @@
                 android:text="Reset Password"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
-                app:spinning_bar_width="4dp"
-                app:spinning_bar_color="@color/white"
-                app:initialCornerAngle="27dp"
                 android:backgroundTint="@color/primaryColor" />
+
 
 
             <TextView
@@ -77,6 +75,7 @@
                 android:textColor="@color/primaryColor"
                 android:textAlignment="center"
                 android:layout_marginTop="20dp"
+                android:padding="16dp"
                 android:onClick="onBackToLoginClick" />
 
         </LinearLayout>
