--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <declare-styleable name="CustomButton">
+        <attr name="spinning_bar_width" format="dimension" />
+    </declare-styleable>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
