--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -77,6 +77,7 @@
 
 
             <TextView
+                android:id="@+id/resetPasswordButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Forgot Password? Click here"
@@ -95,6 +96,7 @@
 
             <!-- Link para registro -->
             <TextView
+                android:id="@+id/signUpButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New user? Register Now"
