--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,17 @@
                 android:layout_gravity="center_horizontal"/>
 
             <TextView
+                android:id="@+id/textViewEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="16sp"
+                android:textColor="@color/primaryColor"
+                android:layout_marginTop="10dp"
+                android:textAlignment="center" />
+
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Dashboard"
@@ -77,7 +88,6 @@
                         android:gravity="center" />
                 </LinearLayout>
 
-                <!-- Ícone para Aplicar Filtro -->
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -136,7 +146,7 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <!-- Exibir imagem selecionada ou capturada -->
+
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
