click icon gallery and open new screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
     android:focusableInTouchMode="true"
     android:gravity="center">
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,7 +40,6 @@
                 android:layout_marginTop="10dp"
                 android:textAlignment="center" />
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -51,7 +49,6 @@
                 android:textColor="@color/primaryColor"
                 android:layout_marginTop="20dp"
                 android:textAlignment="center" />
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -152,8 +149,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginTop="30dp"
-                android:scaleType="centerCrop"
-                android:background="#CCCCCC" />
+                android:scaleType="centerCrop" />
         </LinearLayout>
     </ScrollView>
 
