--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <!-- Título -->
     <TextView
@@ -16,106 +14,26 @@
         android:gravity="center"
         android:layout_gravity="center"/>
 
-    <!-- Imagem para aplicar o filtro -->
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginTop="16dp"
-        android:contentDescription="Image to apply filters"
-        android:scaleType="centerCrop" />
 
-    <!-- Brilho -->
-    <TextView
+
+    <jp.co.cyberagent.android.gpuimage.GPUImageView
+        android:id="@+id/gpuImageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <SeekBar
+        android:id="@+id/seekBarBrightness"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:layout_alignParentBottom="true" />
+
+    <Button
+        android:id="@+id/buttonApplyFilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Brilho"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp"/>
-    <SeekBar
-        android:id="@+id/brightnessSeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="200"
-        android:progress="100"/>
+        android:text="Aplicar Filtro"
+        android:layout_above="@id/seekBarBrightness"
+        android:layout_centerHorizontal="true" />
 
-    <!-- Contraste -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contraste"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp"/>
-    <SeekBar
-        android:id="@+id/contrastSeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="200"
-        android:progress="100"/>
-
-    <!-- Saturação -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Saturação"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp"/>
-    <SeekBar
-        android:id="@+id/saturationSeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="200"
-        android:progress="100"/>
-
-    <!-- Nitidez -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nitidez"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp"/>
-    <SeekBar
-        android:id="@+id/sharpnessSeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="200"
-        android:progress="100"/>
-
-    <!-- Tom -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tom"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp"/>
-    <SeekBar
-        android:id="@+id/toneSeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="200"
-        android:progress="100"/>
-
-    <!-- Botões para salvar ou resetar o filtro -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal">
-
-        <Button
-            android:id="@+id/resetButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Resetar"
-            android:layout_marginEnd="16dp"/>
-
-        <Button
-            android:id="@+id/saveButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Salvar"/>
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
