--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="10dp"
-    android:gravity="center_vertical"
-    android:id="@+id/recyclerViewusers">
+    android:padding="8dp">
 
+    <!-- Exibe o e-mail do usuário -->
     <TextView
         android:id="@+id/textViewUserEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text=""
-        android:textSize="16sp"/>
+        android:text="User Email"
+        android:textSize="16sp"
+        android:padding="8dp" />
 
+    <!-- Botão para editar o usuário -->
     <Button
         android:id="@+id/buttonEditUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edit"
-        android:background="#BB86FC" />
+        android:background="#BB86FC"
+        android:layout_marginEnd="8dp"
+        android:textColor="#FFFFFF" />
 
+    <!-- Botão para excluir o usuário -->
     <Button
         android:id="@+id/buttonDeleteUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete"
-        android:background="#BB86FC"/>
-</androidx.recyclerview.widget.RecyclerView>
+        android:background="#FF0000"
+        android:textColor="#FFFFFF" />
+
+</LinearLayout>
