--- a/app/src/main/res/layout/activity_admin_panel.xml
+++ b/app/src/main/res/layout/activity_admin_panel.xml
@@ -1,32 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recyclerViewusers"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="10dp"
-    android:gravity="center_vertical"
-    android:id="@+id/recyclerViewusers">
-
-    <TextView
-        android:id="@+id/textViewUserEmail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text=""
-        android:textSize="16sp"/>
-
-    <Button
-        android:id="@+id/buttonEditUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit"
-        android:background="#BB86FC" />
-
-    <Button
-        android:id="@+id/buttonDeleteUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        android:background="#BB86FC"/>
-</androidx.recyclerview.widget.RecyclerView>
+    android:layout_height="match_parent"
+    android:padding="10dp" />
