--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -3,35 +3,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="10dp"
+    android:gravity="center_vertical">
 
-    <!-- Exibe o e-mail do usuário -->
     <TextView
         android:id="@+id/textViewUserEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="User Email"
-        android:textSize="16sp"
-        android:padding="8dp" />
+        android:text=""
+        android:textSize="16sp" />
 
-    <!-- Botão para editar o usuário -->
     <Button
         android:id="@+id/buttonEditUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edit"
-        android:background="#BB86FC"
-        android:layout_marginEnd="8dp"
-        android:textColor="#FFFFFF" />
+        android:background="@color/black" />
 
-    <!-- Botão para excluir o usuário -->
     <Button
         android:id="@+id/buttonDeleteUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete"
-        android:background="#FF0000"
-        android:textColor="#FFFFFF" />
-
+        android:background="@color/black" />
 </LinearLayout>
