btn back main activity to login

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,19 @@
     android:focusableInTouchMode="true"
     android:gravity="center">
 
+
+    <ImageButton
+        android:id="@+id/buttonBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_back_arrow"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Voltar para login"
+        android:tint="@color/primaryColor" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
