--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,18 +13,6 @@
     android:gravity="center">
 
 
-    <ImageButton
-        android:id="@+id/buttonBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_back_arrow"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="Voltar para login"
-        android:tint="@color/primaryColor" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,13 +23,31 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="20dp"
-            android:gravity="center_horizontal">
+            android:gravity="start">
+
+            <ImageButton
+                android:id="@+id/buttonBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="16dp"
+                android:src="@drawable/ic_back_arrow"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                />
 
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:src="@drawable/easyfilterlogo"
                 android:layout_gravity="center_horizontal"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="20dp"
+            android:gravity="center_horizontal">
 
             <TextView
                 android:id="@+id/textViewEmail"
@@ -61,7 +67,9 @@
                 android:textStyle="bold"
                 android:textColor="@color/primaryColor"
                 android:layout_marginTop="20dp"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                />
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -86,7 +94,7 @@
                         android:focusable="true"
                         android:padding="10dp"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:tint="@color/successColor" />
+                        app:tint="@color/successColor" />
 
 
                     <TextView
@@ -115,7 +123,7 @@
                         android:clickable="true"
                         android:focusable="true"
                         android:padding="10dp"
-                        android:tint="@color/warningColor" />
+                        app:tint="@color/warningColor" />
 
 
                     <TextView
@@ -143,7 +151,7 @@
                         android:focusable="true"
                         android:padding="10dp"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:tint="@color/infoColor" />
+                        app:tint="@color/infoColor" />
 
 
                     <TextView
