--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,8 +11,7 @@
     <color name="primaryColor">#6200EE</color>
     <color name="primaryDarkColor">#3700B3</color>
     <color name="primaryLightColor">#BB86FC</color>
-    <color name="accentColor">#03DAC5</color> 
-
+    <color name="accentColor">#03DAC5</color> <!-- Cor do botão -->
     <color name="backgroundColor">#F5F5F5</color>
     <color name="surfaceColor">#FFFFFF</color>
     <color name="errorColor">#B00020</color>
@@ -42,11 +41,9 @@
     <color name="textSecondaryColor">#757575</color>
     <color name="textHintColor">#BDBDBD</color>
 
-
-
     <!-- Default screen margins, per the Android Design guidelines. -->
-<dimen name="headerTextSize">25sp</dimen>
-<dimen name="newsMoreTextSize">12sp</dimen>
-<dimen name="loginViewsMargin">20dp</dimen>
+    <dimen name="headerTextSize">25sp</dimen>
+    <dimen name="newsMoreTextSize">12sp</dimen>
+    <dimen name="loginViewsMargin">20dp</dimen>
 
 </resources>
