--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Estilo dos botões -->
+    <!-- Estilo para botões com a cor de fundo personalizada -->
     <style name="FilterButton">
-        <item name="android:backgroundTint">@color/colorAccent</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:backgroundTint">@color/accentColor</item> <!-- Usando a cor accentColor -->
+        <item name="android:textColor">@color/buttonTextColor</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:paddingRight">16dp</item>
         <item name="android:paddingTop">8dp</item>
@@ -12,9 +12,7 @@
         <item name="android:layout_marginEnd">8dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginEnd">10dp</item>
     </style>
 
 </resources>
+
