--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -175,7 +175,7 @@
 
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imageViewGallery"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginTop="30dp"
