--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -47,7 +47,7 @@
         android:id="@+id/applyFilterButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Aplicar Filtro"
+        android:text="Apply Filter"
         android:layout_marginTop="24dp" />
 
 </LinearLayout>
