--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -41,10 +41,10 @@
         />
 
     <Button
-        android:id="@+id/buttonDeleteUser"
+        android:id="@+id/buttonBlockUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete"
+        android:text="Block"
       />
     </LinearLayout>
 </LinearLayout>
